force-app/main/default/objects/Product_Select__c/Product_Select__c.object-meta.xml
<CustomObject>
    <label>Quote Line Item</label>
    <nameField>
        <displayFormat>QL-{000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>