force-app/main/default/objects/Product_Select__c/fields/Calculate_Margin__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Margin__c</fullName>
    <formula>Margin__c *  Total_Commision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>