force-app/main/default/objects/Product_Select__c/fields/Completed_Startup_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Startup_Date__c</fullName>
    <label>Completed Startup</label>
    <type>Date</type>
</CustomField>