force-app/main/default/objects/Product_Select__c/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <label>CR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>