force-app/main/default/objects/Product_Select__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cust. PO</label>
    <type>Checkbox</type>
</CustomField>