force-app/main/default/objects/Product_Select__c/fields/Date_of_Billing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Billing__c</fullName>
    <label>Date of Billing</label>
    <type>Date</type>
</CustomField>