force-app/main/default/objects/Product_Select__c/fields/Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Descriptions__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>