force-app/main/default/objects/Product_Select__c/fields/Estimated_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ship_Date__c</fullName>
    <label>Est. Ship</label>
    <type>Date</type>
</CustomField>