force-app/main/default/objects/Product_Select__c/fields/Expense_GL__c.field-meta.xml
<CustomField>
    <fullName>Expense_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense GL Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Quote Line Items (Expense GL)</relationshipLabel>
    <relationshipName>Expense_GLQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>