force-app/main/default/objects/Product_Select__c/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>