force-app/main/default/objects/Product_Select__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>DNU for anything.</description>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>