force-app/main/default/objects/Product_Select__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Freight</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>