force-app/main/default/objects/Product_Select__c/fields/Hide_Line_On_Email_Startup__c.field-meta.xml
<CustomField>
    <fullName>Hide_Line_On_Email_Startup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Line On Email Startup</label>
    <type>Checkbox</type>
</CustomField>