force-app/main/default/objects/Product_Select__c/fields/Hide_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Hide_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Quantity</label>
    <type>Checkbox</type>
</CustomField>