force-app/main/default/objects/Product_Select__c/fields/Include_in_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Backlog__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include in Backlog</label>
    <type>Checkbox</type>
</CustomField>