force-app/main/default/objects/Product_Select__c/fields/Inventory_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Cost</label>
    <referenceTo>AcctSeed__Inventory_Cost__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>