force-app/main/default/objects/Product_Select__c/fields/Inventory_GL__c.field-meta.xml
<CustomField>
    <fullName>Inventory_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory GL Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>InventoryGLQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>