force-app/main/default/objects/Product_Select__c/fields/Is_Freight_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_Freight_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Freight Override?</label>
    <type>Checkbox</type>
</CustomField>