force-app/main/default/objects/Product_Select__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check whether the Line Item has SO Line Item associated with it.</description>
    <label>Is Locked?</label>
    <type>Checkbox</type>
</CustomField>