force-app/main/default/objects/Product_Select__c/fields/Is_SalePrice_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_SalePrice_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SalePrice Override</label>
    <type>Checkbox</type>
</CustomField>