force-app/main/default/objects/Product_Select__c/fields/IsBillingCreated__c.field-meta.xml
<CustomField>
    <fullName>IsBillingCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Billing Line Item created checkbox update to true</description>
    <label>Is Billing Created</label>
    <type>Checkbox</type>
</CustomField>