force-app/main/default/objects/Product_Select__c/fields/LBS__c.field-meta.xml
<CustomField>
    <fullName>LBS__c</fullName>
    <label>LBS</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>