force-app/main/default/objects/Product_Select__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ace Heaters</fullName>
            </value>
            <value>
                <fullName>Advanced Cooling Technologies (ACT)</fullName>
            </value>
            <value>
                <fullName>Advanced Thermal Hydronics (ATH)</fullName>
            </value>
            <value>
                <fullName>Aldrich</fullName>
            </value>
            <value>
                <fullName>Alfa Laval</fullName>
            </value>
            <value>
                <fullName>Alliance Air Products</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Ameco</fullName>
            </value>
            <value>
                <fullName>American Granby</fullName>
            </value>
            <value>
                <fullName>American Wheatley</fullName>
            </value>
            <value>
                <fullName>Amitrol</fullName>
            </value>
            <value>
                <fullName>Applied Industrial Technologies</fullName>
            </value>
            <value>
                <fullName>Aquanomix</fullName>
            </value>
            <value>
                <fullName>Pumps - Armstrong</fullName>
                <label>Armstrong</label>
            </value>
            <value>
                <fullName>Armstrong Humidifiers</fullName>
            </value>
            <value>
                <fullName>ASC Pumping Equipment</fullName>
            </value>
            <value>
                <fullName>AtmosAir</fullName>
            </value>
            <value>
                <fullName>AU/Hydro Pump</fullName>
            </value>
            <value>
                <fullName>Aurora (Pentair)</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Baltimore Aircoil</fullName>
            </value>
            <value>
                <fullName>Bearings Inc.</fullName>
            </value>
            <value>
                <fullName>Bessamaire</fullName>
            </value>
            <value>
                <fullName>Boilers &amp; Heaters - Other</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Bryant Refractory</fullName>
            </value>
            <value>
                <fullName>Bryant Refractory Co</fullName>
            </value>
            <value>
                <fullName>Caleffi North America</fullName>
            </value>
            <value>
                <fullName>Caleffi North America Inc.</fullName>
            </value>
            <value>
                <fullName>Boilers &amp; Heaters - Camus Hydronics</fullName>
                <label>Camus Hydronics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>