force-app/main/default/objects/Product_Select__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>IF(ISBLANK( Sales_Price__c) , 0,Sales_Price__c)  - IF(ISBLANK( Extended_Cost__c ) , 0, Extended_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Margin$ =  Sales_Price__c  - Extended_Cost__c</inlineHelpText>
    <label>Margin $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>