force-app/main/default/objects/Product_Select__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>