force-app/main/default/objects/Product_Select__c/fields/Original_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Product_Name__c</fullName>
    <label>Original Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>