force-app/main/default/objects/Product_Select__c/fields/Price_Per__c.field-meta.xml
<CustomField>
    <fullName>Price_Per__c</fullName>
    <formula>Sales_Price__c/Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>