force-app/main/default/objects/Product_Select__c/fields/Revenue_GL__c.field-meta.xml
<CustomField>
    <fullName>Revenue_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue GL</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Quote Line Items (Revenue GL)</relationshipLabel>
    <relationshipName>RevenueGLQuote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>