force-app/main/default/objects/Product_Select__c/fields/Row_Index__c.field-meta.xml
<CustomField>
    <fullName>Row_Index__c</fullName>
    <label>Row Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>