force-app/main/default/objects/Product_Select__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B/R</fullName>
            </value>
            <value>
                <fullName>D/S</fullName>
            </value>
            <value>
                <fullName>C/R</fullName>
            </value>
            <value>
                <fullName>P/T</fullName>
            </value>
            <value>
                <fullName>LAB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>