force-app/main/default/objects/Product_Select__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>