force-app/main/default/objects/Product_Select__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>