force-app/main/default/objects/Product_Select__c/fields/SalesOrderId__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>