force-app/main/default/objects/Product_Select__c/fields/Schedule_Startup_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Startup_Date__c</fullName>
    <label>Schedule Startup</label>
    <type>Date</type>
</CustomField>