force-app/main/default/objects/Product_Select__c/fields/T_LBS__c.field-meta.xml
<CustomField>
    <fullName>T_LBS__c</fullName>
    <label>T-LBS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>