force-app/main/default/objects/Product_Select__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>