force-app/main/default/objects/Product_Select__c/fields/Total_Commision__c.field-meta.xml
<CustomField>
    <fullName>Total_Commision__c</fullName>
    <inlineHelpText>This is a temp field, have been created to investigate an issue with margin reportn. hence this field should be considered by any of business user.</inlineHelpText>
    <label>Total Commision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>