force-app/main/default/objects/Product_Select__c/fields/Warranty_Parts_Covered__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Parts_Covered__c</fullName>
    <label>Parts Covered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>