force-app/main/default/objects/Product_Select__c/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <label>Warranty Start</label>
    <type>Date</type>
</CustomField>