force-app/main/default/objects/Product_Select__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Labor &amp; Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>